# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#declarative-config
[metadata]
name = gmc-secserver 
version = 0.0.0
description = #FIXME
long_description = file: README.md, LICENSE
requires = falcon
author = Ralf Rachinger
author_email = genericmc@ralfrachinger.de
keywords = 
license = AGPL-3.0-only
classifiers = 


[options]
include_package_data = True
package_dir=
    =src
packages = find:
scripts = 
install_requires =

[options.packages.find]
where=src
