src_dialogs = files(
  'AboutDialog.cpp',
  'CopyInstanceDialog.cpp',
  'CustomMessageBox.cpp',
  'EditAccountDialog.cpp',
  'ExportInstanceDialog.cpp',
  'IconPickerDialog.cpp',
  'LoginDialog.cpp',
  'MSALoginDialog.cpp',
  'NewComponentDialog.cpp',
  'NewInstanceDialog.cpp',
  'NotificationDialog.cpp',
  'ProfileSelectDialog.cpp',
  'ProgressDialog.cpp',
  'SkinUploadDialog.cpp',
  'UpdateDialog.cpp',
  'VersionSelectDialog.cpp',
  )
srch_dialogs = files(
  'AboutDialog.h',
  'CopyInstanceDialog.h',
  'CustomMessageBox.h',
  'EditAccountDialog.h',
  'ExportInstanceDialog.h',
  'IconPickerDialog.h',
  'LoginDialog.h',
  'MSALoginDialog.h',
  'NewComponentDialog.h',
  'NewInstanceDialog.h',
  'NotificationDialog.h',
  'ProfileSelectDialog.h',
  'ProgressDialog.h',
  'SkinUploadDialog.h',
  'UpdateDialog.h',
  'VersionSelectDialog.h',
  )
ui_dialogs = files(
  'AboutDialog.ui',
  'CopyInstanceDialog.ui',
  'EditAccountDialog.ui',
  'ExportInstanceDialog.ui',
  'IconPickerDialog.ui',
  'LoginDialog.ui',
  'MSALoginDialog.ui',
  'NewComponentDialog.ui',
  'NewInstanceDialog.ui',
  'NotificationDialog.ui',
  'ProfileSelectDialog.ui',
  'ProgressDialog.ui',
  'SkinUploadDialog.ui',
  'UpdateDialog.ui',
  )
