src_groupview = files(  
  'AccessibleGroupView.cpp',
  'GroupView.cpp',
  'GroupedProxyModel.cpp',
  'InstanceDelegate.cpp',
  'VisualGroup.cpp',
)
srch_groupview = files(
  'AccessibleGroupView.h',
  'AccessibleGroupView_p.h',
  'GroupView.h',
  'GroupedProxyModel.h',
  'InstanceDelegate.h',
  'VisualGroup.h',
  )
