src_java = files(
  'JavaChecker.cpp',
  'JavaCheckerJob.cpp',
  'JavaInstall.cpp',
  'JavaInstallList.cpp',
  'JavaUtils.cpp',
  'JavaVersion.cpp',
  'JavaVersion_test.cpp',
  )
srch_java = files(
  'JavaChecker.h',
  'JavaCheckerJob.h',
  'JavaInstall.h',
  'JavaInstallList.h',
  'JavaUtils.h',
  'JavaVersion.h',
  )

subdir(launch)
src_java += src_java_launch
srch_java += srch_java_launch
