src_net = files(
  'Download.cpp',
  'FileSink.cpp',
  'HttpMetaCache.cpp',
  'MetaCacheSink.cpp',
  'NetJob.cpp',
  'PasteUpload.cpp',
  )
srch_net = files(
  'ByteArraySink.h',
  'ChecksumValidator.h',
  'Download.h',
  'FileSink.h',
  'HttpMetaCache.h',
  'MetaCacheSink.h',
  'Mode.h',
  'NetAction.h',
  'NetJob.h',
  'PasteUpload.h',
  'Sink.h',
  'Validator.h',
  )
