
src_update = files(
  'DownloadTask.cpp',
  'GoUpdate.cpp',
  'UpdateChecker.cpp',
  )
srch_update = files(
  'DownloadTask.h',
  'GoUpdate.h',
  'UpdateChecker.h',
  )


#test_downloadtask_src = files(
#  'DownloadTask_test.cpp',
#  'UpdateChecker_test.cpp',
# )
#exec_test_downloadtask = executable('DownloadTask_test', sources: test_downloadtask_src)
#test('DownloadTask Test', exec_test_downloadtask, args: files('testdata'))
