src_pages_global = files( 
  'AccountListPage.cpp',
  'CustomCommandsPage.cpp',
  'ExternalToolsPage.cpp',
  'GenericMCPage.cpp',
  'JavaPage.cpp',
  'LanguagePage.cpp',
  'MinecraftPage.cpp',
  'PasteEEPage.cpp',
  'ProxyPage.cpp',
  )
srch_pages_global = files(
  'AccountListPage.h',
  'CustomCommandsPage.h',
  'ExternalToolsPage.h',
  'GenericMCPage.h',
  'JavaPage.h',
  'LanguagePage.h',
  'MinecraftPage.h',
  'PasteEEPage.h',
  'ProxyPage.h',
  )
ui_pages_global = files(
  'AccountListPage.ui',
  'ExternalToolsPage.ui',
  'GenericMCPage.ui',
  'JavaPage.ui',
  'MinecraftPage.ui',
  'PasteEEPage.ui',
  'ProxyPage.ui',
  )
