src_pages_instance = files(
  'GameOptionsPage.cpp',
  'InstanceSettingsPage.cpp',
  'LegacyUpgradePage.cpp',
  'LogPage.cpp',
  'ModFolderPage.cpp',
  'NotesPage.cpp',
  'OtherLogsPage.cpp',
  'ScreenshotsPage.cpp',
  'ServersPage.cpp',
  'VersionPage.cpp',
  'WorldListPage.cpp',
  )
srch_pages_instance = files(
  'GameOptionsPage.h',
  'InstanceSettingsPage.h',
  'LegacyUpgradePage.h',
  'LogPage.h',
  'ModFolderPage.h',
  'NotesPage.h',
  'OtherLogsPage.h',
  'ResourcePackPage.h',
  'ScreenshotsPage.h',
  'ServersPage.h',
  'ShaderPackPage.h',
  'TexturePackPage.h',
  'VersionPage.h',
  'WorldListPage.h',
  )
ui_pages_instance = files(
  'GameOptionsPage.ui',
  'InstanceSettingsPage.ui',
  'LegacyUpgradePage.ui',
  'LogPage.ui',
  'ModFolderPage.ui',
  'NotesPage.ui',
  'OtherLogsPage.ui',
  'ScreenshotsPage.ui',
  'ServersPage.ui',
  'VersionPage.ui',
  'WorldListPage.ui',
  )
