src_pages_modplatform = files(
  'ImportPage.cpp',
  'VanillaPage.cpp',
  )
srch_pages_modplatform = files(
  'ImportPage.h',
  'VanillaPage.h',
  )
ui_pages_modplatform = files(
  'ImportPage.ui',
  'VanillaPage.ui',
  )
subdir('atlauncher')
subdir('flame')
subdir('ftb')
subdir('legacy_ftb')
subdir('technic')
