src_pages_modplatform_atlauncher = files( 
  'AtlFilterModel.cpp',
  'AtlListModel.cpp',
  'AtlOptionalModDialog.cpp',
  'AtlPage.cpp',
  )
srch_pages_modplatform_atlauncher = files(
  'AtlFilterModel.h',
  'AtlListModel.h',
  'AtlOptionalModDialog.h',
  'AtlPage.h',
  )
ui_pages_modplatform_atlauncher = files(
  'AtlOptionalModDialog.ui',
  'AtlPage.ui',
  )
